[gd_scene load_steps=7 format=3 uid="uid://31x71ogng48m"]

[ext_resource type="Script" path="res://scripts/InvestingSelection.gd" id="1_6uqqj"]
[ext_resource type="Texture2D" uid="uid://b5yfbrxy5smrp" path="res://Game Assets/DALL·E 2024-11-06 09.39.58 - A richly illustrated, vintage adventure-themed game interface in portrait orientation, focused on the theme of _Investing._ The image should include d.webp" id="2_drkoh"]
[ext_resource type="Texture2D" uid="uid://c5acsevyf0ubl" path="res://Game Assets/DALL·E 2024-11-06 10.19.54 - A detailed, vintage-style portrait of a board game theme representing 'Money Management.' The design should resemble an illustrated game board with a .webp" id="3_6bhlm"]
[ext_resource type="Script" path="res://scripts/ManagementSelection.gd" id="3_vfqpt"]
[ext_resource type="Script" path="res://scripts/BudgetSelection.gd" id="5_mpcc6"]
[ext_resource type="Texture2D" uid="uid://dgi3b4ikrl87b" path="res://Game Assets/DALL·E 2024-11-06 09.05.59 - A richly detailed portrait-themed game board illustration, inspired by the style of a fantasy adventure map with a vintage treasure-hunting theme. The.webp" id="6_bgpik"]

[node name="PanelSelection" type="Node2D"]

[node name="Button" type="Button" parent="."]
offset_right = 371.0
offset_bottom = 654.0
script = ExtResource("1_6uqqj")

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(188, 326)
scale = Vector2(0.365234, 0.365234)
texture = ExtResource("2_drkoh")

[node name="Button2" type="Button" parent="."]
offset_left = 392.0
offset_top = -1.0
offset_right = 764.0
offset_bottom = 652.0
script = ExtResource("3_vfqpt")

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
position = Vector2(183, 326)
scale = Vector2(0.365, 0.365)
texture = ExtResource("3_6bhlm")

[node name="Button3" type="Button" parent="."]
offset_left = 795.0
offset_right = 1148.0
offset_bottom = 648.0
script = ExtResource("5_mpcc6")

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
position = Vector2(167, 326)
scale = Vector2(0.365, 0.365)
texture = ExtResource("6_bgpik")

[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="mouse_entered" from="Button2" to="Button2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="Button2" method="_on_mouse_exited"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_pressed"]
[connection signal="mouse_entered" from="Button3" to="Button3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button3" to="Button3" method="_on_mouse_exited"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_pressed"]
